--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -10,6 +10,11 @@
   position: relative;
 }
 
+.nombre {
+  display: grid;
+  place-items: center;
+}
+
 .header__h1 {
   font-weight: var(--text-ligth);
   text-align: center;
@@ -36,48 +41,179 @@
   background-color: var(--bg-secondary);
   color: var(--text);
   padding: 0.7rem 1.5rem;
-  border-radius: 2rem;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 0.8rem;
-  transition: background-color 0.3s ease-out, color 0.3s ease-out;
-
+  transition: background-color 0.3s ease, color 0.3s ease;
+  
   &:hover {
     cursor: pointer;
     background-color: var(--text);
     color: var(--bg);
+    border-top: 0.1rem solid var(--buttonBorder);
+    border-bottom: 0.5rem solid var(--buttonBorder);
+    border-right: 0.1rem solid var(--buttonBorder);
+    border-left: 0.5rem solid var(--buttonBorder);
   }
 }
 
-.morph {
-  content: '';
-  width: 35vw;
-  height: 35vw;
-  background-color: red;
+.lamp{
   position: absolute;
-  z-index: -1;
-  border-radius: 70% 30% 30% 70%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
+  z-index:-1;
+}
+
+.lava{
+  filter: blur(10px);
+  position:absolute;
+  height:100%;
+  width:100%;
+  padding: 0;
+}
+
+.blob{
+  border-radius: 50%;
   background: linear-gradient(var(--morph1), var(--morph2));
-  filter: blur(100px);
-  animation: morph 5s infinite linear;
-  will-change: transform, border-radius;
+  position:absolute;
+}
+
+.blob:nth-child(1){
+  width: 200px;
+  height: 200px;
+  left: 35%;
+  bottom:-15%;
+ 
+  animation: wobble 4s ease-in-out alternate infinite, blob-one ease-in-out 13s infinite;
+}
+.blob:nth-child(2){
+  width: 330px;
+  height: 330px;
+  right: 24%;
+  bottom:-65%;
+  
+  animation: wobble 5s ease-in-out alternate infinite, blob-two ease-in-out 22s infinite;
+ 
+  
+
+}
+.blob:nth-child(3){
+  width: 150px;
+  height: 150px;
+  bottom:-15%;
+  left: 34%;
+  
+  animation: wobble 6s ease-in-out alternate infinite, blob-three ease-in-out 16s infinite;
+}
+.blob:nth-child(4){
+  width: 235px;
+  height: 235px;
+  bottom:-19%;
+  left: 30%;
+  
+  animation: wobble 7s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
+}
+.blob:nth-child(4){
+  width: 235px;
+  height: 235px;
+  bottom:-19%;
+  left: 30%;
+  animation: wobble 8s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
+}
+.blob:nth-child(5){
+   width: 55px;
+  height: 55px;
+  bottom:-25%;
+  left: 34%;
+  
+  animation: wobble 9s ease-in-out alternate infinite, blob-five ease-in-out 32s infinite;
+}
+.blob:nth-child(6){
+  width: 35px;
+  height: 35px;
+  bottom:-25%;
+  right: 34%;
+  
+  animation:wobble 10s ease-in-out alternate infinite,  blob-six ease-in-out 12s infinite;
+}
+.blob:nth-child(7){
+  width: 435px;
+  height: 435px;
+  bottom:-85%;
+  right: 40%;
+  
+  animation: wobble 11s ease-in-out alternate infinite, blob-seven ease-in-out 32s infinite;
+}
+@keyframes blob-one{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+    transform: translatey(-700%);
+  }
+}
+
+@keyframes blob-two{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+    transform: translatey(-420%);
+  }
+}
+
+@keyframes blob-three{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+    transform: translatey(-305%);
+  }
+}
+@keyframes blob-four{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+    transform: translatey(-605%);
+  }
+}
+@keyframes blob-five{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+     transform: translatey(-700%);
+  }
+}
+@keyframes blob-six{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+     transform: translatey(-700%);
+  }
+}
+@keyframes blob-seven{
+  0%, 100%{
+    transform: translatey(0);
+  }
+  50%{
+     transform: translatey(-300%);
+  }
 }
 
 
-@keyframes morph {
-  0% {
-    transform: rotate(0) scale(1);
-
-  }
-
+@keyframes wobble {
   50% {
-    transform: rotate(180deg) scale(1.3);
+   border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
   }
-
-
   100% {
-    transform: rotate(360deg) scale(1);
+   border-radius: 38% 52% 75% 36% / 50% 40% 50% 60%;
   }
 }
