--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,39 +2,44 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
   row-gap: 3vh;
   overflow: hidden;
   position: relative;
 }
 
-.nombre {
-  display: grid;
-  place-items: center;
+.header__div--info {
+  width: 66%;
+}
+
+.header__div--logo {
+  width: 33%;
+  text-align: center;
+}
+
+#logoMode {
+  width: 80%;
 }
 
 .header__h1 {
   font-weight: var(--text-ligth);
-  text-align: center;
-  font-size: 11vh;
+  font-size: 5vw;
 }
 
 .header__h2 {
   font-weight: var(--text-bold);
   text-transform: uppercase;
-  text-align: center;
-  width: 60%;
-  font-size: 12vh;
+  width: 100%;
+  font-size: 6vw;
 }
 
 .div--contact {
   display: flex;
   gap: 2rem;
-  font-size: 3vh;
   justify-content: center;
   align-items: center;
+  font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 .div__a {
@@ -46,16 +51,16 @@
   justify-content: center;
   align-items: center;
   column-gap: 0.8rem;
+  text-decoration: none;
   transition: background-color 0.3s ease, color 0.3s ease;
   
   &:hover {
     cursor: pointer;
     background-color: var(--text);
     color: var(--bg);
-    border-top: 0.1rem solid var(--buttonBorder);
-    border-bottom: 0.5rem solid var(--buttonBorder);
-    border-right: 0.1rem solid var(--buttonBorder);
-    border-left: 0.5rem solid var(--buttonBorder);
+    box-shadow: 5px -5px 0px 0px var(--buttonBorder) inset;
+                -webkit-box-shadow: 5px -5px 0px 0px var(--buttonBorder) inset;
+                -moz-box-shadow: 5px -5px 0px 0px var(--buttonBorder) inset;
   }
 }
 
@@ -87,37 +92,34 @@
   width: 200px;
   height: 200px;
   left: 35%;
-  bottom:-15%;
- 
+  bottom:-15%; 
   animation: wobble 4s ease-in-out alternate infinite, blob-one ease-in-out 13s infinite;
 }
+
 .blob:nth-child(2){
   width: 330px;
   height: 330px;
   right: 24%;
   bottom:-65%;
-  
   animation: wobble 5s ease-in-out alternate infinite, blob-two ease-in-out 22s infinite;
- 
-  
-
 }
+
 .blob:nth-child(3){
   width: 150px;
   height: 150px;
   bottom:-15%;
   left: 34%;
-  
   animation: wobble 6s ease-in-out alternate infinite, blob-three ease-in-out 16s infinite;
 }
+
 .blob:nth-child(4){
   width: 235px;
   height: 235px;
   bottom:-19%;
-  left: 30%;
-  
+  left: 30%;  
   animation: wobble 7s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
 }
+
 .blob:nth-child(4){
   width: 235px;
   height: 235px;
@@ -125,30 +127,31 @@
   left: 30%;
   animation: wobble 8s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
 }
+
 .blob:nth-child(5){
    width: 55px;
   height: 55px;
   bottom:-25%;
   left: 34%;
-  
   animation: wobble 9s ease-in-out alternate infinite, blob-five ease-in-out 32s infinite;
 }
+
 .blob:nth-child(6){
   width: 35px;
   height: 35px;
   bottom:-25%;
-  right: 34%;
-  
-  animation:wobble 10s ease-in-out alternate infinite,  blob-six ease-in-out 12s infinite;
+  right: 34%;  
+  animation: wobble 10s ease-in-out alternate infinite,  blob-six ease-in-out 12s infinite;
 }
+
 .blob:nth-child(7){
   width: 435px;
   height: 435px;
   bottom:-85%;
   right: 40%;
-  
   animation: wobble 11s ease-in-out alternate infinite, blob-seven ease-in-out 32s infinite;
 }
+
 @keyframes blob-one{
   0%, 100%{
     transform: translatey(0);
@@ -175,6 +178,7 @@
     transform: translatey(-305%);
   }
 }
+
 @keyframes blob-four{
   0%, 100%{
     transform: translatey(0);
@@ -183,6 +187,7 @@
     transform: translatey(-605%);
   }
 }
+
 @keyframes blob-five{
   0%, 100%{
     transform: translatey(0);
@@ -191,6 +196,7 @@
      transform: translatey(-700%);
   }
 }
+
 @keyframes blob-six{
   0%, 100%{
     transform: translatey(0);
@@ -199,6 +205,7 @@
      transform: translatey(-700%);
   }
 }
+
 @keyframes blob-seven{
   0%, 100%{
     transform: translatey(0);
@@ -208,12 +215,91 @@
   }
 }
 
-
 @keyframes wobble {
   50% {
    border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
   }
   100% {
    border-radius: 38% 52% 75% 36% / 50% 40% 50% 60%;
+  }
+}
+
+@media (max-width:1024px) {
+  .header {
+    row-gap: 6vh;
+    column-gap: 4vw;
+  }
+
+  .header__div--info {
+    width: 66%;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: left;
+    row-gap: 2vh;
+  }
+  
+  .header__div--logo {
+    width: 33%;
+    text-align: center;
+  }
+  
+  #logoMode {
+    width: 100%;
+  }
+
+  .header__h1 {
+    font-size: 5vw;
+  }
+
+  .header__h2 {
+    font-size: 6vw;
+  }
+}
+
+@media (max-width:550px) {
+  .header {
+    height: 200vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header__div--info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    row-gap: 2vh;
+  }
+  
+  .header__div--logo {
+    width: 100%;
+    text-align: center;
+  }
+  
+  #logoMode {
+    width: 40%;
+  }
+
+  .header__h1 {
+    font-size: 10vw;
+    width: 100%;
+    text-align: center;
+  }
+
+  .header__h2 {
+    font-size: 10vw;
+    text-align: center;
+  }
+
+  .div--contact {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .div__a {
+    padding: 0.7rem 0.9rem;
   }
 }
